[package]
name = "hnbrowser"
version = "0.1.0"
authors = ["Paul Rouget <me@paulrouget.com>"]

[dependencies]
servoglwindows = { git = "https://github.com/paulrouget/servoglwindows" }
servoapi = { git = "https://github.com/paulrouget/servoapi" }
open = "1.1.1"


[replace]
"https://github.com/paulrouget/servoapi#servoapi:0.1.0" = { path = "../servoapi/" }
"https://github.com/paulrouget/servoglwindows#servoglwindows:0.1.0" = { path = "../servoglwindows/" }
"https://github.com/servo/servo#libservo:0.0.1" = { path = '../servo/components/servo' }
